Oops, fix modal x overflow issue

--- a/src/gui/css/components/modal.css
+++ b/src/gui/css/components/modal.css
@@ -21,6 +21,8 @@
     max-height: 100vh;
     min-height: 100vh;
     width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
 
@@ -39,6 +41,8 @@
     align-self: center;
     flex-grow: 0;
     margin: auto 10vw;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .modal .modal-card-body hr {
